[workspace]
members = [
	"bevy_sqlite",
	"bevy_async_util",
	"bevy_piccolo",
	"piccolo",
]

[package]
name = "bevy_mud"
version = "0.1.0"
edition = "2021"
default-run = "example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_sqlite = { path = "./bevy_sqlite" }
bevy_async_util = { path = "./bevy_async_util" }
bevy_piccolo = { path = "./bevy_piccolo" }
anyhow = "1.0.75"
bevy_dylib = { version = "0.13", optional = true }
bevy = { version = "0.13", features = [
	"multi-threaded",
	"bevy_scene",
	"bevy_asset",
	"file_watcher",
	"trace",
], default-features = false }
clap = { version = "4.4.6", features = ["derive"] }
futures = "0.3.28"
sqlx = { version = "0.7.3", features = [
	"runtime-async-std",
	"sqlite",
	"chrono",
] }
tellem = "0.2.0"
tokio-util = { version = "0.7.9", features = ["codec", "compat", "io-util"] }
tracing = { version = "0.1.37", features = ["async-await"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
bytes = "1.5.0"
bcrypt = "0.15.0"
tokio-stream = "0.1.14"
signal-hook = "0.3.17"
libc = "0.2.149"
serde = "1.0.189"
ron = "0.8.1"
ratatui = { version = "0.24.0", default-features = false }
ansi_term = "0.12.1"
tracing-tracy = { version = "0.10.4", features = ["ondemand"], optional = true }
tracing-error = "0.2.0"
tracy-client = { version = "0.16.3", optional = true }
radix_trie = "0.2.1"
flate2 = "1.0.28"
base64 = "0.21.5"
bitflags = "2.4.1"
lz4 = "1.24.0"
zstd = "0.13.0"
chumsky = "1.0.0-alpha.7"
ariadne = { version = "0.4.0", default-features = false }
async-std = "1.12.0"
tokio = "1.37.0"
async-compat = "0.2.3"
hexx = { version = "0.17.0", features = ["bevy_reflect", "serde"] }

[features]
tracy_memory = ["tracy", "tracy-client"]
tracy = ["tracing-tracy"]
default = ["tracy"]

[patch.'https://github.com/jrobsonchase/bevy_async_util']
bevy_async_util = { path = "./bevy_async_util" }

[patch.'https://github.com/jrobsonchase/bevy_sqlite']
bevy_sqlite = { path = "./bevy_sqlite" }

[patch.'https://github.com/jrobsonchase/piccolo']
piccolo = { path = "./piccolo" }
piccolo-util = { path = "./piccolo/util" }
