[workspace]
members = [
	"bevy_piccolo",
]

[package]
name = "bevy_mud"
version = "0.1.0"
edition = "2021"
default-run = "example"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_piccolo = { path = "./bevy_piccolo" }
anyhow = "1.0.86"
bevy_dylib = { version = "0.14", optional = true }
bevy = { version = "0.14", features = [
	"multi_threaded",
	"bevy_scene",
	"bevy_asset",
	"file_watcher",
	"trace",
	"serialize",
], default-features = false }
clap = { version = "4.5.9", features = ["derive"] }
futures = "0.3.30"
tellem = "0.2.0"
tokio-util = { version = "0.7.11", features = ["codec", "compat", "io-util"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
bytes = "1.6.0"
bcrypt = "0.15.1"
tokio-stream = "0.1.15"
signal-hook = "0.3.17"
libc = "0.2.155"
serde = "1.0.204"
ron = "0.8.1"
ratatui = { version = "0.27.0", default-features = false }
ansi_term = "0.12.1"
tracing-tracy = { version = "0.11.0", features = ["ondemand"], optional = true }
tracing-error = "0.2.0"
tracy-client = { version = "0.17.0", optional = true }
radix_trie = "0.2.1"
flate2 = "1.0.30"
base64 = "0.22.1"
bitflags = "2.6.0"
lz4 = "1.25.0"
zstd = "0.13.2"
chumsky = "1.0.0-alpha.7"
ariadne = { version = "0.4.1", default-features = false }
async-std = "1.12.0"
tokio = "1.38.0"
async-compat = "0.2.4"
hexx = { version = "0.17.0", features = ["bevy_reflect", "serde"] }
bevy_replicon = "0.27.0"

[features]
tracy_memory = ["tracy", "tracy-client"]
tracy = ["tracing-tracy"]
default = ["tracy"]

[patch.'https://github.com/jrobsonchase/piccolo']
piccolo = { path = "./piccolo" }
piccolo-util = { path = "./piccolo/util" }

[patch.crates-io]
hexx = { git = "https://github.com/ManevilleF/hexx" }
