[package]
name = "bevy_piccolo"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
bevy = { version = "0.14.0", features = [ "bevy_asset", "multi_threaded", "file_watcher" ], default-features = false }
gc-arena = "0.5.3"
parking_lot = "0.12.3"
piccolo = { git = "https://github.com/jrobsonchase/piccolo", branch = "develop" }
piccolo-util = { git = "https://github.com/jrobsonchase/piccolo", branch = "develop" }
serde = "1.0.204"
thiserror = "1.0.61"
